# games101

Assignment1/代码框架/: main.cpp
Assignment2/代码框架/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/Code/: Texture.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/Code/models/spot/: spot_texture.xcf
Assignment4/code/: CMakeLists.txt  main.cpp  vcpkg.json
